src/app/App.css
#root {
  margin: 0 auto;
  font-family: outfit;
}

@font-face {
  font-family: outfit;
  src: url('../common/fonts/outfit.ttf');
  font-display: swap;
}

.dvh {
  min-height: 100vh;
  min-height: 100dvh;
}

.svh {
  min-height: 85.6svh;
  min-height: 85.6svh;
}

